# proyecto_nadia

./: .env.example  .env.testing.example  .gitignore  .pre-commit-config.yaml  .pre-commit-hook.sh  .python-version  CHECKPOINT_JUN23_2025.md  CHECKPOINT_JUN25_2025.md  CLAUDE.md  DATABASE_SCHEMA.sql  DEBUGGING_GUIDE.md  Dockerfile  HYBRID_ARCHITECTURE_PLAN.md  IMPLEMENTATION_ROADMAP.md  Makefile  PENDING_IMPROVEMENTS_DEC_2024.md  PROJECT_STATUS_JUN26_2025.md  PROJECT_STATUS_JUN27_2025.md  RAG_INSTALLATION_GUIDE.md  RAG_PRODUCTION_SUMMARY.md  README.md  README_WORKFLOW.md  REVIEW_SUMMARY.md  SECURITY.md  SESSION_CHECKPOINT_DEC_2024.md  SESSION_CONTEXT_JUN21_2025.md  SESSION_CONTEXT_JUN22_2025.md  SESSION_CONTEXT_JUN22_2025_LAST10.md  SESSION_SUMMARY_JUN25_CUSTOMER_TRACKING.md  SESSION_SUMMARY_JUN26_2025.md  SESSION_SUMMARY_JUN27_PM_2025.md  TODO_NEXT_SESSION.md  all_code.txt  bot_session.session  bot_session.session-journal  bugs.md  check_async_issues.py  check_db.py  debug_rag_managers.py  depreciacion_soluciones.md  (+48 more)
.github/: CODEOWNERS  branch_protection_config.json  pull_request_template.md
agents/: intermediary_agent.py  memory_strategies.py  post_llm2_agent.py  recovery_agent.py  supervisor_agent.py  types.py
analytics/: __init__.py  cta_analytics.py
api/: auth_routes.py  backup_manager.py  data_analytics.py  knowledge_routes.py  mcp_health_api.py  rate_limit_monitor.py  server.py
auth/: __init__.py  oauth_provider.py  rbac_manager.py  session_manager.py  token_blacklist.py  token_manager.py
bitacora/: CHECKPOINT_JUN25_2025.md  CHECKPOINT_JUN25_2025_CUSTOMER_TRACKING.md  DEICISION_LOG.md  ENTITY_RESOLUTION_IMPLEMENTATION_PLAN.md  FIXES_JUN25_2025.md  LAST_10_MESSAGES_SUMMARY_DEC21.md  LAST_10_MESSAGES_SUMMARY_JUN23.md  MEMORY_CONTEXT_ISSUE_REPORT.md  NADIA_ARCHITECTURE_REPORT.md  NADIA_ARCHITECTURE_REPORT2.md  NADIA_ARCHITECTURE_REPORT_CURRENT.md  PENDIENTES_FUTUROS.md  POSTGRESQL_MEMORY_SYSTEMS_REPORT.md  README.md  SESSION_CHECKPOINT_DEC_21_2024.md  SESSION_CHECKPOINT_JUN_23_2025.md  SESSION_CHECKPOINT_JUN_23_2025_FINAL.md  SESSION_SUMMARY_JUN27_2025.md  SESSION_SUMMARY_JUN27_PM_SESSION3_2025.md  TECHNICAL_REPORT_NADIA.md  async_sync_audit_report.txt  bugs.md  check_system.sh  conversations_20250621_191913.csv  depreciaciones.md  fix_env.sh  health_check.sh  nota_log_2.md  nota_log_desarrollador.md  observaciones_bugs.md  plan_fixeo_factorización.md  problemas.md  propuesta2.md  propuesta_ultimatum.json  propuesta_ultimatum.md  red_team_report_20250610_150046.json  red_team_report_20250610_153005.json  red_team_report_20250610_153311.json  red_team_report_20250610_153440.json  red_team_report_20250610_153644.json  (+2 more)
cache/: embeddings.pkl
chatbot_nadia.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
checkpoints/: README.md  SESSION_DEC26_2025_COHERENCE_INTEGRATION_COMPLETE.md  SESSION_DEC26_2025_COHERENCE_SYSTEM_COMPLETE.md  SESSION_DEC26_2025_COMPREHENSIVE_RECOVERY.md  SESSION_DEC26_2025_MCP_DEBUGGING_SETUP.md  (+9 more)
(+243 files in other folders)
