# ───────────────────────────────────────────────────
# 1 Metadatos mínimos del proyecto
# ───────────────────────────────────────────────────
[project]
name = "chatbot_nadia"
version = "0.1.0"
description = "Bot girlfriend project"
authors = [{ name = "Tu Nombre", email = "tu@email.com" }]
readme = "README.md"
requires-python = ">=3.10"
# Dependencies required for the project:
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0", 
    "openai>=1.17,<2.0",
    "httpx>=0.25,<1.0",
    "redis>=4.6",
    "telethon>=1.34",
    "python-jose[cryptography]>=3.3.0",
    "python-dotenv>=1.0.0",
    "passlib[bcrypt]>=1.7.4",
    "cryptography>=41.0.0"
]

# ───────────────────────────────────────────────────
# 2 Cómo construir / instalar (Setuptools)
# ───────────────────────────────────────────────────
[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Lista explícita de sub-paquetes que quieres exponer al importar
packages = [
    "agents",
    "memory",
    "llms",
    "utils"
]

# ───────────────────────────────────────────────────
# 3 Ruff (linter / formateador)
# ───────────────────────────────────────────────────
[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

# ───────────────────────────────────────────────────
# 4 Pytest
# ───────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"
